Use Float.valueOf